--- a/README
+++ b/README
@@ -1,15 +1,12 @@
-CSharp.oDesk is a C# .NET wrapper for the oDesk RESTful API.
+There are 2 main projects in solution:
+
+1. CSharp.oDesk Project is a C# .NET wrapper for the oDesk RESTful API.
 
 It contains the following
 
   * OAuth connection support for oDesk
   * API access via explicit Urls and response handling for oDesk
-  * ASP.NET MVC 3 example project
-  * Console application example project
 
-The following will be added
-
-  * API binding for oDesk
+2. CSharp.oDesk.Analyze is a project to fetch Jobs and Contractors information based on their skills. All fetched data is saving to SQL Server database. Sripts to create tables are also presented.
 
 API documentation can be found here: http://developers.odesk.com/API-Documentation
-NuGet package can be found here: https://nuget.org/packages/CSharp.oDesk
